--- a/index.html
+++ b/index.html
@@ -6,105 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>sage</title>
   <link rel="ico" href="favicon.svg" />
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
   <section class="layout">
     <!-- Left Sidebar -->
-    <aside class="left_sidebar">
-      <div class="logo">
-        <img src="assets/img/sage_logo.png" alt="sage logo" />
-      </div>
-      <nav class="nav">
-        <a class="active" href="#">Home</a>
-        <a href="#">For you</a>
-        <a href="#">Search</a>
-        <a href="#">Library</a>
-        <a href="#">Upgrade</a>
-      </nav>
-    </aside>
+    <div class="left_sidebar"></div>
     <!-- Main -->
     <main class="main">
       <div class="top">
         <input class="search" placeholder="Search" />
-        <!-- <div>Welcome, sage</div> -->
-        <div>
-          <ul class="user_menu">
-            <li><a href="#">Sign in</a></li>
-            <li><a href="#">Join</a></li>
-          </ul>
-        </div>
       </div>
-      <section class="hero">
-        <div class="hero_cover"></div>
-        <div class="hero_info">
-          <h2>Sleep 4ever</h2>
-          <p>Releases for you</p>
-          <div class="track"><span>Sleep 4ever</span><span>2:42</span></div>
-          <div class="track"><span>ever of broken hearts</span><span>2:51</span></div>
-          <div class="track"><span>if i were u</span><span>3:06</span></div>
-          <div class="track"><span>hot girl bummer</span><span>3:08</span></div>
-        </div>
-      </section>
-      <!-- Playlist -->
-      <section class="playlist_section">
-        <h2>Your Favorite Playlist</h2>
-        <!-- playlist.js -->
-        <div class="playlist_card_grid"></div>
-      </section>
-      <!-- By Genre -->
-      <section class="byGenre_section">
-        <h2>Playlist By Genre</h2>
-        <!-- By Genre.js -->
-        <div class="byGenre_card_grid"></div>
-      </section>
+
     </main>
     <!-- Right Sidebar -->
-    <aside class="right_sidebar">
+    <div class="right_sidebar">
       <h1>Music Playing</h1>
-    </aside>
-    <!-- Player Bar -->
-    <div class="player_bar">
-      <button class="player_toggle" aria-label="toggle player"></button>
-      <div class="player_track">
-        <img src="/assets/img/sage_logo.png" alt="album">
-        <h3>곡 제목</h3>
-      </div>
-      <div class="player_controls">
-        <button class="ctrl prev">⏮</button>
-        <button class="ctrl play">▶</button>
-        <button class="ctrl next">⏭</button>
-      </div>
-      <div class="player_progress">
-        <div class="progress_bg">
-          <div class="progress_fill"></div>
-        </div>
-      </div>
-      <div class="player_right">
-        <svg class="volume_icon" viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M4 9h4l5-4v14l-5-4H4z" />
-        </svg>
-
-        <input type="range" min="0" max="1" step="0.01" value="0.7" class="volume_bar">
-      </div>
-
-      <!-- <audio id="audio" src="music.mp3"></audio> -->
     </div>
   </section>
-  <script>
-    const playerBar = document.querySelector(".player_bar");
-    const toggleBtn = document.querySelector(".player_toggle");
-
-    toggleBtn.addEventListener("click", () => {
-      playerBar.classList.toggle("hidden");
-    });
-  </script>
-
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="js/playlistcardData.js"></script>
-  <script src="js/playlistcard.js"></script>
+  <script src="/js/include.js"></script>
 </body>
 
 </html>
