--- a/basic/library.html
+++ b/basic/library.html
@@ -16,16 +16,8 @@
     <div class="left_sidebar"></div>
     <!-- Main -->
     <main class="main">
-      <div class="top">
-        <input class="search" placeholder="Search" />
-        <!-- <div>Welcome, sage</div> -->
-        <div>
-          <ul class="user_menu">
-            <li><a href="#">Sign in</a></li>
-            <li><a href="#">Join</a></li>
-          </ul>
-        </div>
-      </div>
+      <!-- Top -->
+      <div class="top"></div>
       <section class="hero">
         <div class="hero_cover"></div>
         <div class="hero_info">
@@ -51,17 +43,12 @@
       </section>
     </main>
     <!-- Right Sidebar -->
-    <aside class="right_sidebar">
+    <!-- <aside class="right_sidebar">
       <h1>Music Playing</h1>
-    </aside>
+    </aside> -->
     <!-- Player Bar -->
-    <div class="player_bar">
-    </div>
+    <!-- <div class="player_bar"></div> -->
   </section>
-  <script>
-    
-  </script>
-
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="/js/include.js"></script>
