--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
     <div class="left_sidebar"></div>
     <!-- Main -->
     <main class="main">
-      <div class="top">
-        <input class="search" placeholder="Search" />
-      </div>
-
+      <div class="top"></div>
+      
     </main>
     <!-- Right Sidebar -->
-    <div class="right_sidebar">
+    <!-- <div class="right_sidebar">
       <h1>Music Playing</h1>
-    </div>
+    </div> -->
   </section>
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
