--- a/basic/3.html
+++ b/basic/3.html
@@ -1,134 +1,193 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Music Tabs</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SAGE MUSIC</title>
+  <link rel="stylesheet" href="style.css" />
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f0f0f0;
-    }
+    * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-    .tabs_container {
-      display: flex;
-      align-items: flex-start;
-      gap: 0.5rem;
-      padding: 2rem;
-    }
+body {
+  background: #0e0e0e;
+  color: #fff;
+  font-family: system-ui, sans-serif;
+  overflow: hidden;
+}
 
-    /* 탭 버튼 */
-    .tab {
-      position: relative;
-      background: #ccc;
-      cursor: pointer;
-      padding: 1rem 0.5rem;
-      width: 80px;
-      text-align: center;
-      writing-mode: vertical-rl;
-      transform: rotate(180deg);
-      border-radius: 0 10px 10px 0;
-      transition: background 0.3s;
-    }
+.record_hero {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
 
-    .tab:hover {
-      background: #bbb;
-    }
+/* 중앙 텍스트 */
+.hero_center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 10;
+}
 
-    .tab.active {
-      background: #999;
-    }
+.site_title {
+  font-size: 4rem;
+  letter-spacing: 0.3rem;
+}
 
-    /* 탭 내용 */
-    .tab_content {
-      position: absolute;
-      left: 80px;
-      top: 0;
-      width: 300px;
-      background: #fff;
-      border-radius: 0 10px 10px 0;
-      box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
-      padding: 1rem;
-      display: none;
-    }
+.site_desc {
+  margin: 16px 0;
+  font-size: 1.1rem;
+  opacity: 0.7;
+}
 
-    .tab_content.active {
-      display: block;
-    }
+.start_btn {
+  padding: 12px 28px;
+  border-radius: 999px;
+  border: none;
+  background: #fff;
+  color: #000;
+  font-size: 1rem;
+  cursor: pointer;
+}
 
-    .audio_player {
-      margin-top: 1rem;
-    }
+/* 레코드 라인 */
+.record_lines {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.record_line {
+  width: 100%;
+  overflow: hidden;
+}
+
+.record_track {
+  display: flex;
+  gap: 40px;
+  width: max-content;
+}
+
+/* 레코드 */
+.record {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background:
+    radial-gradient(circle at center, #111 20%, #000 21%, #222 40%, #000 41%);
+  animation: spin 6s linear infinite;
+}
+
+/* 방향 */
+.record_line.left .record_track {
+  animation: move_left 40s linear infinite;
+}
+
+.record_line.right .record_track {
+  animation: move_right 40s linear infinite;
+}
+
+/* 애니메이션 */
+@keyframes move_left {
+  from {
+    transform: translateX(-30%);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+
+@keyframes move_right {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(-30%);
+  }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/* 반응형 */
+@media (max-width: 768px) {
+  .site_title {
+    font-size: 2.5rem;
+  }
+
+  .record {
+    width: 80px;
+    height: 80px;
+  }
+}
+
   </style>
 </head>
 <body>
-  <div class="tabs_container">
-    <div class="tab" data-tab="1">Music</div>
-    <div class="tab" data-tab="2">Music</div>
-    <div class="tab" data-tab="3">Music</div>
-    <div class="tab" data-tab="4">Music</div>
-    <div class="tab" data-tab="5">Music</div>
-    
-    <!-- 내용 영역 -->
-    <div class="tab_content" id="tab-1">
-      <h3>Song 1</h3>
-      <p>Artist: Artist 1</p>
-      <audio class="audio_player" controls>
-        <source src="song1.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-      </audio>
+
+<div class="record_hero">
+
+  <!-- 중앙 텍스트 -->
+  <div class="hero_center">
+    <h1 class="site_title">SAGE</h1>
+    <p class="site_desc">음악이 흐르는 방향으로</p>
+    <button class="start_btn">시작하기</button>
+  </div>
+
+  <!-- 레코드 라인들 -->
+  <div class="record_lines">
+    <div class="record_line left">
+      <div class="record_track">
+        <div class="record"></div>
+        <div class="record"></div>
+        <div class="record"></div>
+        <div class="record"></div>
+      </div>
     </div>
 
-    <div class="tab_content" id="tab-2">
-      <h3>Song 2</h3>
-      <p>Artist: Artist 2</p>
-      <audio class="audio_player" controls>
-        <source src="song2.mp3" type="audio/mp3">
-      </audio>
+    <div class="record_line right">
+      <div class="record_track">
+        <div class="record"></div>
+        <div class="record"></div>
+        <div class="record"></div>
+        <div class="record"></div>
+      </div>
     </div>
 
-    <div class="tab_content" id="tab-3">
-      <h3>Song 3</h3>
-      <p>Artist: Artist 3</p>
-      <audio class="audio_player" controls>
-        <source src="song3.mp3" type="audio/mp3">
-      </audio>
+    <div class="record_line left">
+      <div class="record_track">
+        <div class="record"></div>
+        <div class="record"></div>
+        <div class="record"></div>
+        <div class="record"></div>
+      </div>
     </div>
 
-    <div class="tab_content" id="tab-4">
-      <h3>Song 4</h3>
-      <p>Artist: Artist 4</p>
-      <audio class="audio_player" controls>
-        <source src="song4.mp3" type="audio/mp3">
-      </audio>
-    </div>
-
-    <div class="tab_content" id="tab-5">
-      <h3>Song 5</h3>
-      <p>Artist: Artist 5</p>
-      <audio class="audio_player" controls>
-        <source src="song5.mp3" type="audio/mp3">
-      </audio>
+    <div class="record_line right">
+      <div class="record_track">
+        <div class="record"></div>
+        <div class="record"></div>
+        <div class="record"></div>
+        <div class="record"></div>
+      </div>
     </div>
   </div>
 
-  <script>
-    const tabs = document.querySelectorAll('.tab');
-    const contents = document.querySelectorAll('.tab_content');
+</div>
 
-    tabs.forEach(tab => {
-      tab.addEventListener('click', () => {
-        // 모든 탭과 내용 비활성화
-        tabs.forEach(t => t.classList.remove('active'));
-        contents.forEach(c => c.classList.remove('active'));
-
-        // 클릭한 탭 활성화
-        tab.classList.add('active');
-        const tabId = tab.getAttribute('data-tab');
-        document.getElementById('tab-' + tabId).classList.add('active');
-      });
-    });
-  </script>
 </body>
 </html>
