--- a/basic/library.html
+++ b/basic/library.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="ko">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>sage</title>
+  <title>sageMusic</title>
   <link rel="ico" href="favicon.svg" />
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/library.css">
@@ -49,8 +49,10 @@
     <!-- Player Bar -->
     <!-- <div class="player_bar"></div> -->
   </section>
-
+  <div class="player_bar"></div>
+  
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="/js/sign.js"></script>
   <script src="/js/include.js"></script>
   <script src="/js/playerbar.js"></script>
   <script src="/js/playlistcardData.js"></script>
