--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
     <!-- Main -->
     <main class="main">
       <div class="top"></div>
-      
+      <div class="home">
+  <div class="bg_records">
+    <span></span><span></span><span></span><span></span>
+  </div>
+
+  <div class="home_center">
+    <h1><img src="/assets/img/sage_logo.png" alt="sage logo"></h1>
+    <div class="sign_submit_btn">Play Something</div>
+  </div>
+</div>
+
     </main>
     <!-- Right Sidebar -->
     <!-- <div class="right_sidebar">
